--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="bg-dark text-white">
         <div class="container">
             <nav class="navbar navbar-expand-sm d-flex flex-wrap align-items-center justify-content-md-between py-3 mb-4">
-                <a href="index.html" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none navbar-brand">THANATCH.TH </a>
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none navbar-brand">THANATCH.TH </a>
                 <button class="navbar-toggler btn-outline-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
