--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ ul.timeline-3 > li:before {
               </div>
               <div class="col-sm-4">
                   <h3>email</h3>
-                  <p class="text-muted">browny@info.com</p>
+                  <p class="text-muted">thanatporn.thon@gmail.com</p>
               </div>
               <div class="col-sm-4">
                   <h3>address</h3>
@@ -349,10 +349,10 @@ ul.timeline-3 > li:before {
           <div class="h-100 p-5 bg-light border rounded-3">
             <h2>PROGRAMMING LANGUAGES & TOOLS</h2>
             <span class="text-muted">
-              Languages : VB.NET, C#, C++,Python,Progress<br>
+              Languages : VB.NET, C#, C++, Python, Progress<br>
               Frameworks : .NET, Django<br>
-              Databases : MSSQL, MySQL,OpenEdge<br>
-              Tools : Visual studio, Visual studio code, SQL Server Management Studio, Progress Developer Studio, Postman, Git, Asana, Microsoft Dynamics AX</span>
+              Databases : MSSQL, MySQL, OpenEdge<br>
+              Tools : Visual studio, Visual studio code, SQL Server Management Studio, Progress Developer Studio, Postman, Git, Asana</span>
           </div>
         </div>
       </div>
@@ -377,7 +377,7 @@ ul.timeline-3 > li:before {
             </svg>
          </a>
         </div>
-        <p>© Thongchai,Thnanatporn.</p>
+        <p>© Thongchai,Thanatporn.</p>
       </footer>
     </div>
 
